# antidetect1

./: ARCHITECTURE.md  BUILD_GUIDE.md  CMakeLists.txt  COMMERCIAL_ARCHITECTURE.md  DEPENDENCIES.md  DETECTION_ANALYSIS.md  PROFILE_COMBINATIONS.md  README.md  SETUP_COMPLETE_GUIDE.md  build.bat  build.ps1  build.sh  build_cmake.bat  build_linux.sh  build_windows.bat
.github/workflows/: README.md  ci.yml  pr-checks.yml  windows-build.yml  windows.yml
antidetect_tool/: CMakeLists.txt  README.md  antidetect  antidetect.cpp  antidetect.h  main.cpp
docs/: BUILD_GUIDE.md  GUI_DESIGN_SPEC.md
gui/: MainWindow.hpp  main.cpp  mainwindow.cpp  mainwindow.h
include/: ADBManager.hpp  AdvancedSpoofing.hpp  AndroidSpoofManager.hpp  AntiDetectCore.hpp  AntiDetectEngine.hpp  BatteryMaskingManager.hpp  CommonTypes.hpp  Config.hpp  CryptoEmulator.hpp  DetectionBypass.hpp  DeviceFingerprint.hpp  HumanTouchEmulator.hpp  KernelLevelHardener.hpp  Logger.hpp  NetworkSpoofer.hpp  NetworkStackSpoofer.hpp  PlayIntegrityBypass.hpp  ProfileManager.hpp  ProxyManager.hpp  RealisticProfileGenerator.hpp  SafetyNetAdvancedBypass.hpp  SensorSpoofer.hpp  SystemManager.hpp  TimingAttackPrevention.hpp  VirtualPhonePro.hpp  VirtualSecurityChip.hpp  openssl_stub.h
include/anti_detect/: AdvancedAntiDetection.hpp  AntiDetectionManager.hpp  CompleteAntiDetection.hpp  HypervisorBypass.hpp  MediaDeviceSpoofer.hpp  NetworkStackSpoofer.hpp  PlayIntegrityBypass.hpp  ProcEmulator.hpp  SELinuxEmulator.hpp  SafetyNetEmulator.hpp  SensorSpoofer.hpp  TLSFingerprint.hpp  TrustZoneEmulator.hpp  VirtualSecurityChip.hpp
include/browser/: BrowserFingerprinting.hpp
include/core/: CoreEngine.hpp  CryptoUtils.hpp  ProfileManager.hpp  VMManager.hpp
include/emulator/: AndroidEmulator.hpp  AndroidEmulatorManager.hpp  AppStore.hpp  MainWindow.hpp  ScrcpyMainWindow.hpp
include/hardware/: AdvancedBatterySimulator.hpp  AdvancedSensorSimulator.hpp  HardwareEmulator.hpp
include/hardware/touch/: HyperRealisticTouchEmulator.hpp
include/network/: NetworkVirtualizer.hpp  ProxyConfig.hpp
include/profiles/: DeviceIdentityGenerator.hpp  DeviceProfileDatabase.hpp
include/security/attestation/: HardwareAttestationEmulator.hpp
include/vmcontroller/: ADBSpoofer.hpp  AutoSetupManager.hpp  QEMUController.hpp  QEMUSpoofer.hpp  ScrcpyManager.hpp  SetupWizard.hpp  VMController.hpp  VMDisplayWidget.hpp  VirtualBoxController.hpp  WindowEmbedder.hpp
os_level_antidetect/: CMakeLists.txt  README.md  antidetect  main.cpp  test_profile.txt
os_level_antidetect/core/: advanced_fingerprint.h  android_spoof.cpp  android_spoof.h  system_fingerprint.cpp
src/: AdvancedSpoofing.cpp  AndroidSpoofManager.cpp  AntiDetectCore.cpp  AntiDetectEngine.cpp  BatteryMaskingManager.cpp  Config.cpp  CryptoEmulator.cpp  CryptoUtils.cpp  DetectionBypass.cpp  DeviceFingerprint.cpp  HardwareFingerprintSpoofer.cpp  HumanTouchEmulator.cpp  KernelLevelHardener.cpp  Logger.cpp  NetworkSpoofer.cpp  NetworkStackSpoofer.cpp  PlayIntegrityBypass.cpp  ProfileManager.cpp  ProxyManager.cpp  RealPhoneHardening.cpp  RealisticProfileGenerator.cpp  SafetyNetAdvancedBypass.cpp  SensorSpoofer.cpp  SystemManager.cpp  TimingAttackPrevention.cpp  VirtualSecurityChip.cpp  main.cpp
src/anti_detect/: AdvancedAntiDetection.cpp  AntiDetectionManager.cpp  CompleteAntiDetection.cpp  HypervisorBypass.cpp  MediaDeviceSpoofer.cpp  NetworkStackSpoofer.cpp  PlayIntegrityBypass.cpp  ProcEmulator.cpp  SELinuxEmulator.cpp  SafetyNetEmulator.cpp  SensorSpoofer.cpp  TLSFingerprint.cpp  TrustZoneEmulator.cpp  VirtualSecurityChip.cpp
src/browser/: BrowserFingerprinting.cpp
src/cli/: main_cli.cpp
src/core/: CoreEngine.cpp  CryptoUtils.cpp  ProfileManager.cpp  ResourceAllocator.cpp  SnapshotManager.cpp  StorageManager.cpp  VMManager.cpp
src/emulator/: AndroidEmulatorManager.cpp  MainWindow.cpp  ScrcpyMainWindow.cpp
src/hardware/: AdvancedBatterySimulator.cpp  AdvancedSensorSimulator.cpp  HardwareEmulator.cpp
src/hardware/touch/: HyperRealisticTouchEmulator.cpp
src/network/: NetworkVirtualizer.cpp  ProxyConfig.cpp
src/profiles/: DeviceIdentityGenerator.cpp  DeviceProfileDatabase.cpp
src/security/attestation/: HardwareAttestationEmulator.cpp
src/vmcontroller/: ADBSpoofer.cpp  AutoSetupManager.cpp  QEMUController.cpp  QEMUSpoofer.cpp  ScrcpyManager.cpp  SetupWizard.cpp  VMController.cpp  VMDisplayWidget.cpp  VirtualBoxController.cpp  WindowEmbedder.cpp
tests/: CMakeLists.txt  test_core.cpp
windows_release/: COMPILE_LINUX.sh  COMPILE_WINDOWS.bat  Makefile  USER_GUIDE.txt
windows_release/core/: advanced_fingerprint.cpp  android_spoof.cpp  android_spoof.h  system_fingerprint.h
